kube/infra/registry/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    spec:
      containers:
        - name: registry
          image: docker.io/registry:latest
          ports:
            - name: debug
              containerPort: 8090
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /etc/docker/registry
              name: config
            - mountPath: /data
              name: data
            - mountPath: /var/run/secrets/registry
              name: secrets
      enableServiceLinks: false
      serviceAccountName: registry
      terminationGracePeriodSeconds: 10
      volumes:
        - name: config
          configMap:
            name: registry
        - name: data
          persistentVolumeClaim:
            claimName: registry
        - name: secrets
          secret:
            secretName: registry
