kube/infra/registry/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8090"
spec:
  ports:
    - name: debug
      port: 8090
    - name: http
      port: 80
      targetPort: 8080
