kube/infra/registry/ingressroute.k8s.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: registry
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`registry.seankhliao.com`)
    kind: Rule
    services:
    - name: registry
      port: 80
  tls:
    certResolver: default
